# PythonAMTPCR

./: README.md  benchmark.csv  celery_object.py  docker-compose.yml  logics.py  main.py  pyproject.toml
