[tool.poetry]
name = "csvbenchmarkfastapi"
version = "0.1.0"
description = ""
authors = ["insmnia <teamspirit3209@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.75.0"
uvicorn = "^0.17.6"
pandas = "^1.4.1"
nest-asyncio = "^1.5.4"
celery = "^5.2.3"
redis = "^4.2.0"
redis-server = "^6.0.9"
rq = "^1.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
